--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <p>Estamos felizes em te ver por aqui. Explore e aproveite um ambiente tranquilo e acolhedor!</p>
         <div class="footer">
-            <p>Desenvolvido com cuidado.</p>
+            <p>Desenvolvido sem cuidado.</p>
         </div>
     </div>
 </body>
